syntax/tests/parsing/errors/other/labelledParameters.res
let f = (x, y=2, z) => x + y + z

type f = (x: int, y: int) => int
